<resources>
    <string name="app_name">App - Ingreso de Datos</string>
    <string name="text_name">Nombre:</string>
    <string name="text_lastname">Apellido:</string>
    <string name="text_age">Edad:</string>
    <string name="text_button">Enviar</string>
    <string name="text_out"> </string>
    <string name="text_in"> </string>
    <string name="text_out_name">Nombre Ingresado:</string>
    <string name="text_out_lastname">Apellido Ingresado:</string>
    <string name="text_out_age">Edad Ingresada:</string>

</resources>
