<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/text_in"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_name_main"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_name_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/text_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txt_lastname_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/text_in"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_lastname_main"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_input" />

    <TextView
        android:id="@+id/txt_lastname_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="75dp"
        android:text="@string/text_lastname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_main"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txt_age_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="75dp"
        android:text="@string/text_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_lastname_main"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txt_age_input"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="10sp"
        android:ems="10"
        android:hint="@string/text_in"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_age_main"
        app:layout_constraintTop_toBottomOf="@+id/txt_lastname_input" />

    <Button
        android:id="@+id/button_send_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:onClick="sendButton"
        android:text="@string/text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_age_input"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/icon_primary_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawableBottom="@drawable/icon_id_primary"
        app:layout_constraintEnd_toEndOf="@+id/button_send_main"
        app:layout_constraintStart_toStartOf="@+id/button_send_main"
        app:layout_constraintTop_toBottomOf="@+id/button_send_main" />
</androidx.constraintlayout.widget.ConstraintLayout>